--- a/src/main/java/GUI/CourseInstructorDetails.form
+++ b/src/main/java/GUI/CourseInstructorDetails.form
@@ -108,6 +108,9 @@
             <Property name="text" type="java.lang.String" value="EDIT"/>
             <Property name="name" type="java.lang.String" value="EditBtn" noResource="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton3MouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
