--- a/src/main/java/GUI/OnsiteCourseDetails.form
+++ b/src/main/java/GUI/OnsiteCourseDetails.form
@@ -67,6 +67,9 @@
         <Property name="text" type="java.lang.String" value="EDIT"/>
         <Property name="name" type="java.lang.String" value="EditBtn" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton3MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton4">
       <Properties>
@@ -79,6 +82,9 @@
         <Property name="text" type="java.lang.String" value="DELETE"/>
         <Property name="name" type="java.lang.String" value="DeleteBtn" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton4MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton5">
       <Properties>
