--- a/src/main/java/GUI/StudentGradeDetails.form
+++ b/src/main/java/GUI/StudentGradeDetails.form
@@ -79,6 +79,9 @@
         <Property name="text" type="java.lang.String" value="EDIT"/>
         <Property name="name" type="java.lang.String" value="EditBtn" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
@@ -91,6 +94,9 @@
         <Property name="text" type="java.lang.String" value="DELETE"/>
         <Property name="name" type="java.lang.String" value="DeleteBtn" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
